--- a/SchemeInterpreter/SchemeInterpreter.csproj
+++ b/SchemeInterpreter/SchemeInterpreter.csproj
@@ -49,13 +49,14 @@
     <Compile Include="If.cs" />
     <Compile Include="Pair.cs" />
     <Compile Include="Parser.cs" />
+    <Compile Include="Predefined.cs" />
     <Compile Include="Procedure.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime.cs" />
     <Compile Include="SpecialForm.cs" />
     <Compile Include="SpecialFormToken.cs" />
-    <Compile Include="ValueParser.cs" />
+    <Compile Include="TypeParsers.cs" />
     <Compile Include="Util.cs" />
     <Compile Include="Value.cs" />
     <Compile Include="Variable.cs" />
