Added a top-level environment + refactored the predifined functions + comitted using VS!

--- a/SchemeInterpreter/SchemeInterpreter.csproj
+++ b/SchemeInterpreter/SchemeInterpreter.csproj
@@ -70,6 +70,7 @@
     <None Include="Scheme\init.scm">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="Scheme\meta-eval.scm" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
