--- a/SchemeInterpreter.Tests/SchemeInterpreter.Tests.csproj
+++ b/SchemeInterpreter.Tests/SchemeInterpreter.Tests.csproj
@@ -51,13 +51,18 @@
   </Choose>
   <ItemGroup>
     <Compile Include="EvaluationTests.cs" />
+    <Compile Include="SpecialFormsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestsBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SchemeInterpreter\SchemeInterpreter.csproj">
       <Project>{07bd5243-84e1-4814-a74a-f004113bcdb2}</Project>
       <Name>SchemeInterpreter</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Scheme\" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
