Added delayed evaluation (delay + force)

--- a/SchemeInterpreter.Tests/SchemeInterpreter.Tests.csproj
+++ b/SchemeInterpreter.Tests/SchemeInterpreter.Tests.csproj
@@ -61,9 +61,7 @@
       <Name>SchemeInterpreter</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Scheme\" />
-  </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
